--- a/index.html
+++ b/index.html
@@ -989,10 +989,10 @@
             
             return `
                 <div class="flex flex-col items-center">
-                    <svg width="90" height="90" class="progress-ring sm:w-[110px] sm:h-[110px]">
-                        <circle cx="45" cy="45" r="${radius}" stroke="#e5e7eb" stroke-width="6" fill="none" class="sm:cx-[55] sm:cy-[55] sm:stroke-[8]"/>
+                    <svg width="90" height="90" class="progress-ring">
+                        <circle cx="45" cy="45" r="${radius}" stroke="#e5e7eb" stroke-width="6" fill="none"/>
                         <circle cx="45" cy="45" r="${radius}" stroke="${primaryColor}" stroke-width="6" fill="none"
-                                class="progress-ring-circle sm:cx-[55] sm:cy-[55] sm:stroke-[8]"
+                                class="progress-ring-circle"
                                 style="stroke-dasharray: ${circumference}; stroke-dashoffset: ${offset};"/>
                     </svg>
                     <div class="text-center mt-1 sm:mt-2">
@@ -1213,7 +1213,7 @@
                         Thẻ ${currentFlashcardIndex + 1} / ${vocabularyData.length}
                     </div>
                     
-                    <div class="flashcard ${isFlipped ? 'flipped' : ''}" onclick="flipCard()" style="height: 300px; max-height: 50vh;" class="sm:h-[400px]">
+                    <div class="flashcard ${isFlipped ? 'flipped' : ''}" onclick="flipCard()" style="height: 300px; max-height: 50vh;">
                         <div class="flashcard-inner">
                             <div class="flashcard-front" style="background-color: ${primaryColor}; color: white;">
                                 <div class="text-center" style="font-size: ${baseSize * 2}px; font-weight: bold; font-family: ${customFont}, Arial, sans-serif;">
@@ -2260,5 +2260,5 @@
 
         initializeApp();
     </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997be0df46c0f44c',t:'MTc2MjAwNTIwNy4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997be6dc971f5ff2',t:'MTc2MjAwNTQ1Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
